# discord-event-bot

./: .gitignore  bot.py  pyproject.toml
cogs/: admin.py  virus.py
cogs/data/: items.py
cogs/utils/: context.py  formats.py  storage.py
